hphp/hack/test/typecheck/is_expression/is_vector_access.php.exp
ERROR: File "is_vector_access.php", line 7, characters 10-16:
Typing error (Typing[4110])
  File "is_vector_access.php", line 7, characters 10-16:
  Expected an array that can be indexed
  File "is_vector_access.php", line 5, characters 19-27:
  But got `Tv#3` from this `is` expression test
  File "collections/Vector.hhi", line 48, characters 52-53:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 575, characters 25-26:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 305, characters 27-28:
    via this generic `Tv`
  File "interfaces.hhi", line 115, characters 23-24:
    via this generic `Tv`
  File "interfaces.hhi", line 92, characters 66-67:
    via this generic `Tv`
